--- a/app/src/main/res/layout/activity_create_routine.xml
+++ b/app/src/main/res/layout/activity_create_routine.xml
@@ -6,139 +6,129 @@
     android:layout_height="match_parent">
 
     <TableLayout
-        android:id="@+id/tableLayout"
+        android:id="@+id/tableLayoutRoutine"
         android:layout_width="411dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="60dp"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
+
 
         <TableRow
             android:id="@+id/tableRowTitleRow"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:background="@color/cardview_shadow_start_color"
 
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent">
 
-            <TextView
-                android:id="@+id/textViewExerciseTitle"
-                android:layout_width="80dp"
-                android:layout_height="wrap_content"
-                android:text="@string/exercise"
-                android:textAlignment="center" />
 
             <TextView
+                android:id="@+id/textViewExerciseTitle"
+                style="@style/routine_table_title_row_item"
+                android:layout_width="160dp"
+                android:text="@string/exercise" />
+
+           <!-- <TextView
                 android:id="@+id/textViewProgressionTitle"
+                style="@style/routine_table_title_row_item"
                 android:layout_width="80dp"
-                android:layout_height="wrap_content"
-                android:text="@string/progression"
-                android:textAlignment="center"/>
+                android:text="@string/progression" />-->
 
             <TextView
                 android:id="@+id/textViewBreakTitle"
-                android:layout_width="45dp"
-                android:layout_height="wrap_content"
-                android:text="@string/pause"
-                android:textAlignment="center"/>
+                style="@style/routine_table_title_row_item"
+                android:layout_width="48dp"
+                android:text="@string/pause" />
 
             <TextView
                 android:id="@+id/textViewLoadTitle"
-                android:layout_width="40dp"
-                android:layout_height="wrap_content"
-                android:text="@string/load"
-                android:textAlignment="center"/>
+                style="@style/routine_table_title_row_item"
+                android:layout_width="48dp"
+                android:text="@string/load" />
 
             <TextView
                 android:id="@+id/textViewSeriesTitle"
-                android:layout_width="45dp"
-                android:layout_height="wrap_content"
-                android:text="@string/series"
-                android:textAlignment="center"/>
+                style="@style/routine_table_title_row_item"
+                android:layout_width="48dp"
+                android:text="@string/series" />
 
             <TextView
                 android:id="@+id/textViewRepsTitle"
-                android:layout_width="42dp"
-                android:layout_height="wrap_content"
-                android:text="@string/reps"
-                android:textAlignment="center"/>
+                style="@style/routine_table_title_row_item"
+                android:layout_width="48dp"
+                android:text="@string/reps" />
 
             <TextView
                 android:id="@+id/textViewRpeTitle"
-                android:layout_width="35dp"
-                android:layout_height="wrap_content"
-                android:text="@string/rpe"
-                android:textAlignment="center"/>
+                style="@style/routine_table_title_row_item"
+                android:layout_width="48dp"
+                android:text="@string/rpe" />
 
         </TableRow>
+
         <TableRow
             android:id="@+id/tableRowRoutineRow"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:background="@color/material_dynamic_neutral20"
 
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent">
 
             <EditText
-                android:id="@+id/textViewExercise"
+                android:id="@+id/editTextExercise"
+                style="@style/routine_table_row_item"
+                android:layout_width="160dp"
+                android:hint="a" />
+
+           <!-- <EditText
+                android:id="@+id/editTextProgression"
                 android:layout_width="80dp"
                 android:layout_height="48dp"
                 android:hint="a"
                 android:inputType="text"
-                android:textAlignment="center" />
+                android:textAlignment="center"
+                android:textSize="12sp"
+                android:background="null"/>-->
 
             <EditText
-                android:id="@+id/textViewProgression"
-                android:layout_width="80dp"
-                android:layout_height="48dp"
-                android:inputType="text"
-                android:hint="a"
-                android:textAlignment="center"/>
-
-            <EditText
-                android:id="@+id/textViewBreak"
+                android:id="@+id/editTextBreak"
+                style="@style/routine_table_row_item"
                 android:layout_width="48dp"
-                android:layout_height="48dp"
-                android:inputType="text"
-                android:hint="a"
-                android:textAlignment="center"/>
+                android:hint="a" />
 
             <EditText
-                android:id="@+id/textViewLoad"
+                android:id="@+id/editTextLoad"
+                style="@style/routine_table_row_item"
                 android:layout_width="48dp"
-                android:layout_height="48dp"
-                android:inputType="text"
-                android:hint="a"
-                android:textAlignment="center"/>
+                android:hint="a" />
 
             <EditText
-                android:id="@+id/textViewSeries"
+                android:id="@+id/editTextSeries"
+                style="@style/routine_table_row_item"
                 android:layout_width="48dp"
-                android:layout_height="48dp"
-                android:inputType="text"
-                android:hint="a"
-                android:textAlignment="center"/>
+                android:hint="a" />
 
             <EditText
-                android:id="@+id/textViewReps"
+                android:id="@+id/editTextReps"
+                style="@style/routine_table_row_item"
                 android:layout_width="48dp"
-                android:layout_height="48dp"
-                android:inputType="text"
-                android:hint="a"
-                android:textAlignment="center"/>
+                android:hint="a" />
 
             <EditText
-                android:id="@+id/textViewRpe"
+                android:id="@+id/editTextRpe"
+                style="@style/routine_table_row_item"
                 android:layout_width="48dp"
-                android:layout_height="48dp"
-                android:inputType="text"
-                android:hint="a"
-                android:textAlignment="center"/>
+                android:hint="a" />
 
 
         </TableRow>
+
     </TableLayout>
 
     <Button
@@ -158,7 +148,7 @@
         android:text="Add exercise"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tableLayout" />
+        app:layout_constraintTop_toBottomOf="@+id/tableLayoutRoutine" />
 
     <EditText
         android:id="@+id/editTextRoutineName"
