--- a/app/src/main/res/layout/activity_create_routine.xml
+++ b/app/src/main/res/layout/activity_create_routine.xml
@@ -5,16 +5,17 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/RoutineLayout"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:windowSoftInputMode="adjustPan">
 
 
     <ExpandableListView
         android:id="@+id/ExpandableListViewRoutineItems"
         android:layout_width="410dp"
         android:layout_height="452dp"
-        android:layout_marginBottom="232dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintStart_toStartOf="parent"
+        android:descendantFocusability="beforeDescendants"
+        app:layout_constraintTop_toBottomOf="@+id/editTextRoutineName" />
 
     <Button
         android:id="@+id/buttonSaveRoutine"
