--- a/app/src/main/res/layout/activity_create_routine.xml
+++ b/app/src/main/res/layout/activity_create_routine.xml
@@ -9,13 +9,26 @@
     android:windowSoftInputMode="adjustPan">
 
 
-    <ExpandableListView
-        android:id="@+id/ExpandableListViewRoutineItems"
-        android:layout_width="410dp"
-        android:layout_height="452dp"
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="450dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        android:descendantFocusability="beforeDescendants"
-        app:layout_constraintTop_toBottomOf="@+id/editTextRoutineName" />
+        android:measureAllChildren="true"
+        android:fillViewport="true"
+        app:layout_constraintTop_toBottomOf="@+id/editTextRoutineName">
+
+        <ExpandableListView
+            android:id="@+id/ExpandableListViewRoutineItems"
+            android:nestedScrollingEnabled="true"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:descendantFocusability="beforeDescendants"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/editTextRoutineName" />
+
+    </ScrollView>
 
     <Button
         android:id="@+id/buttonSaveRoutine"
@@ -31,11 +44,11 @@
         android:id="@+id/buttonAddExercise"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="16dp"
-        android:layout_marginBottom="16dp"
+        android:layout_marginBottom="172dp"
         android:text="Add exercise"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
 
     <EditText
         android:id="@+id/editTextRoutineName"
@@ -46,6 +59,16 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
+    <Button
+        android:id="@+id/buttonDeleteExercise"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="28dp"
+        android:layout_marginBottom="16dp"
+        android:text="Delete Exercise"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
