--- a/app/src/main/res/layout/routine_expandable_layout.xml
+++ b/app/src/main/res/layout/routine_expandable_layout.xml
@@ -29,6 +29,22 @@
             android:orientation="horizontal">
 
                 <TextView
+                    android:id="@+id/textViewPause"
+                    style="@style/routine_text_view_item"
+                    android:text="@string/pause" />
+
+                <EditText
+                    android:id="@+id/editTextPause"
+                    style="@style/routine_edit_text_item"
+                    android:hint="@string/enter_pause"/>
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+
+                <TextView
                     android:id="@+id/textViewLoad"
                     style="@style/routine_text_view_item"
                     android:text="@string/load"/>
