--- a/app/src/main/res/layout/activity_create_routine.xml
+++ b/app/src/main/res/layout/activity_create_routine.xml
@@ -9,27 +9,15 @@
     android:windowSoftInputMode="adjustPan">
 
 
-    <ScrollView
-        android:id="@+id/scrollView2"
+    <ExpandableListView
+        android:id="@+id/ExpandableListViewRoutineItems"
         android:layout_width="match_parent"
-        android:layout_height="450dp"
-        android:fillViewport="true"
-        android:measureAllChildren="true"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
+        android:layout_height="460dp"
+        android:descendantFocusability="beforeDescendants"
+        android:nestedScrollingEnabled="true"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/editTextRoutineName">
+        app:layout_constraintTop_toBottomOf="@+id/editTextRoutineName" />
 
-        <ExpandableListView
-            android:id="@+id/ExpandableListViewRoutineItems"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:descendantFocusability="beforeDescendants"
-            android:nestedScrollingEnabled="true"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/editTextRoutineName" />
-
-    </ScrollView>
 
     <Button
         android:id="@+id/buttonSaveRoutine"
@@ -39,7 +27,7 @@
         android:layout_marginEnd="200dp"
         android:text="Add to workout plan"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/scrollView2" />
+        app:layout_constraintTop_toBottomOf="@+id/ExpandableListViewRoutineItems" />
 
     <Button
         android:id="@+id/buttonAddExercise"
@@ -48,7 +36,7 @@
         android:text="Add exercise"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/scrollView2" />
+        app:layout_constraintTop_toBottomOf="@+id/ExpandableListViewRoutineItems" />
 
     <EditText
         android:id="@+id/editTextRoutineName"
@@ -68,7 +56,7 @@
         android:layout_marginEnd="28dp"
         android:text="Delete Exercise"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/scrollView2" />
+        app:layout_constraintTop_toBottomOf="@+id/ExpandableListViewRoutineItems" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
