--- a/app/src/main/res/layout/activity_create_routine.xml
+++ b/app/src/main/res/layout/activity_create_routine.xml
@@ -58,5 +58,15 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/ExpandableListViewRoutineItems" />
 
+    <Button
+        android:id="@+id/button"
+        android:layout_width="91dp"
+        android:layout_height="48dp"
+        android:layout_marginTop="64dp"
+        android:text="Load DB"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/ExpandableListViewRoutineItems" />
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
