--- a/app/src/main/res/layout/training_plans_recycler_view_item_layout.xml
+++ b/app/src/main/res/layout/training_plans_recycler_view_item_layout.xml
@@ -6,11 +6,11 @@
 
 
     <TextView
-        android:id="@+id/textViewTrainingPlanName"
+        android:id="@+id/textViewElement"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_weight="1"
-        android:text="Training plan name"
+        android:text="Element"
         android:textSize="20sp"
         android:layout_marginStart="10dp"/>
 </LinearLayout>
