--- a/app/src/main/res/layout/activity_training_plan.xml
+++ b/app/src/main/res/layout/activity_training_plan.xml
@@ -6,11 +6,12 @@
     android:layout_height="match_parent"
     tools:context=".activity.TrainingPlanActivity">
 
-    <EditText
-        android:id="@+id/editTextTrainingPlanName"
+    <TextView
+        android:id="@+id/textViewTrainingPlanName"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:hint="Enter plan name"
+        android:hint="Plan"
+        android:textSize="25sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -22,7 +23,7 @@
         android:layout_marginTop="1dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/editTextTrainingPlanName"
+        app:layout_constraintTop_toBottomOf="@+id/textViewTrainingPlanName"
         />
 
     <Button
@@ -41,17 +42,6 @@
         android:layout_marginStart="288dp"
         android:layout_marginTop="44dp"
         android:text="Save"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/buttonAddRoutine" />
-
-    <Button
-        android:id="@+id/button2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="44dp"
-        android:text="Load db"
-        app:layout_constraintEnd_toStartOf="@+id/buttonSave"
-        app:layout_constraintHorizontal_bias="0.375"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/buttonAddRoutine" />
 
