--- a/app/src/main/res/layout/fragment_start_workout_menu.xml
+++ b/app/src/main/res/layout/fragment_start_workout_menu.xml
@@ -1,13 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/workoutMenu"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#80000000"
     tools:context=".fragment.StartWorkoutMenuFragment">
 
     <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/RecyclerViewStartWorkoutMenu"
         android:layout_width="match_parent"
         android:layout_height="300dp"
-        android:layout_gravity="bottom"/>
+        android:layout_gravity="bottom"
+        android:background="@color/material_dynamic_neutral0" />
 
 </FrameLayout>
