--- a/app/src/main/res/layout/workout_expandable_layout.xml
+++ b/app/src/main/res/layout/workout_expandable_layout.xml
@@ -5,7 +5,7 @@
     android:layout_height="match_parent">
 
     <TextView
-        android:id="@+id/textView"
+        android:id="@+id/textViewSeriesCount"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="1."
@@ -33,9 +33,10 @@
         android:hint="Weight"
         android:autofillHints="" />
     <TextView
+        android:id="@+id/textViewWeightUnitValue"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textSize="18sp"
-        android:text="kg"
+        android:text="@string/val"
         android:layout_marginEnd="10dp"/>
 </LinearLayout>
