--- a/app/src/main/res/layout/workout_expandable_title_layout_helper.xml
+++ b/app/src/main/res/layout/workout_expandable_title_layout_helper.xml
@@ -1,83 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
+<com.example.gymapp.layout.WorkoutExpandableTitleLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_height="match_parent"
-    android:orientation="vertical">
-
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="30dp"
-        android:text="@string/exercise"
-        android:textSize="20sp"
-        android:textAlignment="center"
-        android:textStyle="bold"/>
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:layout_marginStart="20dp"
-        android:layout_marginEnd="10dp"
-        android:baselineAligned="false">
-
-        <LinearLayout
-            style="@style/workout_linear_layout_title_item">
-            <TextView
-                android:text="Pause:"
-                style="@style/workout_text_view_title_item"/>
-            <TextView
-                android:id="@+id/textViewPauseValue"
-                android:text="@string/val"
-                style="@style/workout_text_view_title_item"/>
-        </LinearLayout>
-
-        <LinearLayout
-            style="@style/workout_linear_layout_title_item">
-
-            <TextView
-                android:text="Reps:"
-                style="@style/workout_text_view_title_item"/>
-            <TextView
-                android:id="@+id/textViewRepsValue"
-                android:text="@string/val"
-                style="@style/workout_text_view_title_item"/>
-        </LinearLayout>
-
-        <LinearLayout
-            style="@style/workout_linear_layout_title_item">
-
-            <TextView
-                android:text="Series:"
-                style="@style/workout_text_view_title_item"/>
-            <TextView
-                android:id="@+id/textViewSeriesValue"
-                android:text="@string/val"
-                style="@style/workout_text_view_title_item"/>
-        </LinearLayout>
-
-        <LinearLayout
-            style="@style/workout_linear_layout_title_item">
-
-            <TextView
-                android:text="Rpe:"
-                style="@style/workout_text_view_title_item"/>
-            <TextView
-                android:id="@+id/textViewRpeValue"
-                android:text="@string/val"
-                style="@style/workout_text_view_title_item"/>
-        </LinearLayout>
-
-        <LinearLayout
-            style="@style/workout_linear_layout_title_item">
-
-            <TextView
-                android:text="Pace:"
-                style="@style/workout_text_view_title_item"/>
-            <TextView
-                android:id="@+id/textViewPaceValue"
-                android:text="@string/val"
-                style="@style/workout_text_view_title_item"/>
-        </LinearLayout>
-    </LinearLayout>
-
-</LinearLayout>
+    android:layout_width="match_parent">
+</com.example.gymapp.layout.WorkoutExpandableTitleLayout>
