--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -19,6 +19,7 @@
         <item name="android:layout_width">match_parent</item>
         <item name="android:textSize">16sp</item>
         <item name="android:layout_marginRight">10dp</item>
+        <item name="android:singleLine">true</item>
     </style>
 
     <style name="workout_text_view_title_item" parent="@android:style/TextAppearance.Small">
