--- a/app/src/main/res/values/attrs.xml
+++ b/app/src/main/res/values/attrs.xml
@@ -19,4 +19,7 @@
 
     <declare-styleable name="WorkoutExpandableTitleLayout">
     </declare-styleable>
+
+    <declare-styleable name="WorkoutHistoryExpandableLayout">
+    </declare-styleable>
 </resources>
