--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -21,6 +21,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Your current training plan: "
+            android:layout_marginStart="10dp"
+            android:layout_marginEnd="10dp"
             android:textSize="20sp"/>
         <Spinner
             android:id="@+id/spinnerTrainingPlans"
